uipath-service/main/default/objects/Case/fields/Account_CSM__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM__c</fullName>
    <formula>Account.CSM__c</formula>
    <label>Account CSM</label>
    <type>Text</type>
</CustomField>