uipath-service/main/default/objects/Case/fields/Account_STA__c.field-meta.xml
<CustomField>
    <fullName>Account_STA__c</fullName>
    <formula>Account.Support_Technical_Advisor__c</formula>
    <label>Account STA</label>
    <type>Text</type>
</CustomField>