uipath-service/main/default/objects/Case/fields/Account_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_Type__c</fullName>
    <formula>IF(ISBLANK(TEXT(Account.Maintenance_Flag__c )) || ISNULL(TEXT(Account.Maintenance_Flag__c)), 
IMAGE(&quot;/resource/StandardImage&quot;,&apos;Standard&apos;, 20, 70) , 
IF(TEXT(Account.Maintenance_Flag__c) = &apos;Premium&apos;, 
IMAGE(&quot;/resource/PremiumImage&quot;,&apos;Premium&apos;, 20, 70),
IF(TEXT(Account.Maintenance_Flag__c) = &apos;Premium Plus&apos;, 
IMAGE(&quot;/resource/Premium_Plus_Image&quot;,&apos;Premium Plus&apos;, 20, 70), 
IF(TEXT(Account.Maintenance_Flag__c) = &apos;Standard&apos;, 
IMAGE(&quot;/resource/StandardImage&quot;,&apos;Standard&apos;, 20,70), 
TEXT(Account.Maintenance_Flag__c) 
) 
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>