uipath-service/main/default/objects/Case/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF(ISBLANK(TEXT(Account.Maintenance_Flag__c )) || ISNULL(TEXT(Account.Maintenance_Flag__c )),
  &quot;Standard&quot;,
  TEXT(Account.Maintenance_Flag__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>