uipath-service/main/default/objects/Case/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <label>Actual Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>