uipath-service/main/default/objects/Case/fields/Case_Owner_is_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_is_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when case owner is a queue. Unchecked when case owner is a user.</description>
    <label>Case Owner is Queue</label>
    <type>Checkbox</type>
</CustomField>