uipath-service/main/default/objects/Case/fields/Case_Re_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Re_Open_Date__c</fullName>
    <label>Case Re Open Date</label>
    <type>Date</type>
</CustomField>