uipath-service/main/default/objects/Case/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <inlineHelpText>This will contain the assumed cause</inlineHelpText>
    <label>Cause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>