uipath-service/main/default/objects/Case/fields/Child_case_Updates_Notification__c.field-meta.xml
<CustomField>
    <fullName>Child_case_Updates_Notification__c</fullName>
    <label>Child case Updates Notification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>