uipath-service/main/default/objects/Case/fields/Closure_Classification__c.field-meta.xml
<CustomField>
    <fullName>Closure_Classification__c</fullName>
    <label>Closure Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party not under support scope</fullName>
            </value>
            <value>
                <fullName>Answer/Solution Provided</fullName>
            </value>
            <value>
                <fullName>Answer/Solution provided(Referring KB)</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
                <isActive>false</isActive>
                <label>Bug</label>
            </value>
            <value>
                <fullName>Bug - Reported as JIRA</fullName>
            </value>
            <value>
                <fullName>By Design</fullName>
                <isActive>false</isActive>
                <label>By Design</label>
            </value>
            <value>
                <fullName>Cannot Reproduce</fullName>
                <isActive>false</isActive>
                <label>Cannot Reproduce</label>
            </value>
            <value>
                <fullName>Client Infrastructure</fullName>
                <isActive>false</isActive>
                <label>Client Infrastructure</label>
            </value>
            <value>
                <fullName>Code / Logic</fullName>
                <isActive>false</isActive>
                <label>Code / Logic</label>
            </value>
            <value>
                <fullName>Configuration</fullName>
                <isActive>false</isActive>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>Customer/Environment Specific</fullName>
            </value>
            <value>
                <fullName>Customer Abandoned</fullName>
            </value>
            <value>
                <fullName>Customer Found Solution(Referring KB)</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
                <isActive>false</isActive>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Hardware Failure</fullName>
                <isActive>false</isActive>
                <label>Hardware Failure</label>
            </value>
            <value>
                <fullName>How To</fullName>
                <isActive>false</isActive>
                <label>How To</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <isActive>false</isActive>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Known Issue</fullName>
                <isActive>false</isActive>
                <label>Known Issue</label>
            </value>
            <value>
                <fullName>No Response from Customer</fullName>
                <isActive>false</isActive>
                <label>No Response from Customer</label>
            </value>
            <value>
                <fullName>Product Limitation</fullName>
                <isActive>false</isActive>
                <label>Product Limitation</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <isActive>false</isActive>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>Software Failure</fullName>
                <isActive>false</isActive>
                <label>Software Failure</label>
            </value>
            <value>
                <fullName>Third Party</fullName>
                <isActive>false</isActive>
                <label>Third Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>