uipath-service/main/default/objects/Case/fields/Comm_Update__c.field-meta.xml
<CustomField>
    <fullName>Comm_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comm Update</label>
    <type>Checkbox</type>
</CustomField>