uipath-service/main/default/objects/Case/fields/Comm_Value__c.field-meta.xml
<CustomField>
    <fullName>Comm_Value__c</fullName>
    <label>Comm Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR Sent</fullName>
            </value>
            <value>
                <fullName>Comm Violated</fullName>
            </value>
            <value>
                <fullName>Comm Completed</fullName>
            </value>
            <value>
                <fullName>Comm Success</fullName>
            </value>
            <value>
                <fullName>FR Voilated</fullName>
            </value>
            <value>
                <fullName>Comm Running</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>