uipath-service/main/default/objects/Case/fields/Continue_with_Unassigned_Account__c.field-meta.xml
<CustomField>
    <fullName>Continue_with_Unassigned_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display  warning message if account=&apos;Unassigned Account&apos; at the time case closure if it is checked</description>
    <label>Continue with Unassigned Account?</label>
    <type>Checkbox</type>
</CustomField>