uipath-service/main/default/objects/Case/fields/Copy_From_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Copy_From_Parent_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy From Parent Case</label>
    <type>Checkbox</type>
</CustomField>