uipath-service/main/default/objects/Case/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>