uipath-service/main/default/objects/Case/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Contact</label>
    <type>Checkbox</type>
</CustomField>