uipath-service/main/default/objects/Case/fields/Environment_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Environment_Of_Issue__c</fullName>
    <label>Environment Of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>