uipath-service/main/default/objects/Case/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>