uipath-service/main/default/objects/Case/fields/First_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Response__c</fullName>
    <label>First Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>