uipath-service/main/default/objects/Case/fields/First_Response_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Response Sent</label>
    <type>Checkbox</type>
</CustomField>