uipath-service/main/default/objects/Case/fields/First_Response_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time_Stamp__c</fullName>
    <label>First Response Time Stamp</label>
    <type>DateTime</type>
</CustomField>