uipath-service/main/default/objects/Case/fields/Has_ER__c.field-meta.xml
<CustomField>
    <fullName>Has_ER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has ER</label>
    <type>Checkbox</type>
</CustomField>