uipath-service/main/default/objects/Case/fields/Is_Free_Mailer__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_Mailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Academy and Connect Support cases to identify whether the email address is official or personal</description>
    <label>Is Free Mailer?</label>
    <type>Checkbox</type>
</CustomField>