uipath-service/main/default/objects/Case/fields/IsClosed_NotifyOnMail__c.field-meta.xml
<CustomField>
    <fullName>IsClosed_NotifyOnMail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used in reopen notification process builder to avoid looping</description>
    <label>IsClosed_NotifyOnMail</label>
    <type>Checkbox</type>
</CustomField>