uipath-service/main/default/objects/Case/fields/License_Code__c.field-meta.xml
<CustomField>
    <fullName>License_Code__c</fullName>
    <label>License Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>