uipath-service/main/default/objects/Case/fields/Milestone_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Milestone Success action and in Code</description>
    <label>Milestone Completed</label>
    <type>Checkbox</type>
</CustomField>