uipath-service/main/default/objects/Case/fields/Milestone_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Target_Date__c</fullName>
    <description>Has the Target date of Milestone that is closest to breach.</description>
    <label>Milestone Target Date</label>
    <type>DateTime</type>
</CustomField>