uipath-service/main/default/objects/Case/fields/No_of_Emails_Received_for_5_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Emails_Received_for_5_days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Emails Received for 5 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>