uipath-service/main/default/objects/Case/fields/No_of_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>No_of_Emails_Sent__c</fullName>
    <label>No. of Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>