uipath-service/main/default/objects/Case/fields/Pending_Infra_MCS_Time_stamp__c.field-meta.xml
<CustomField>
    <fullName>Pending_Infra_MCS_Time_stamp__c</fullName>
    <label>Pending Infra/MCS Time stamp</label>
    <type>DateTime</type>
</CustomField>