uipath-service/main/default/objects/Case/fields/Pending_Product_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Pending_Product_Timestamp__c</fullName>
    <label>Pending Product Timestamp</label>
    <type>DateTime</type>
</CustomField>