uipath-service/main/default/objects/Case/fields/Pending_Sr_Tech_Support_time_stamp__c.field-meta.xml
<CustomField>
    <fullName>Pending_Sr_Tech_Support_time_stamp__c</fullName>
    <label>Pending Sr.Tech Support time stamp</label>
    <type>DateTime</type>
</CustomField>