uipath-service/main/default/objects/Case/fields/Pending_Tech_support_time_stamp__c.field-meta.xml
<CustomField>
    <fullName>Pending_Tech_support_time_stamp__c</fullName>
    <label>Pending Tech support time stamp</label>
    <type>DateTime</type>
</CustomField>