uipath-service/main/default/objects/Case/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <inlineHelpText>This will contain the technical summary of the identified problem/question</inlineHelpText>
    <label>Problem</label>
    <length>32072</length>
    <type>Html</type>
</CustomField>