uipath-service/main/default/objects/Case/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Product Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic Alliance</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
                <label>Action Center</label>
            </value>
            <value>
                <fullName>Activation</fullName>
                <isActive>false</isActive>
                <label>Activation</label>
            </value>
            <value>
                <fullName>Activities</fullName>
                <isActive>false</isActive>
                <label>Activities</label>
            </value>
            <value>
                <fullName>AI Capabilities</fullName>
                <isActive>false</isActive>
                <label>AI Capabilities</label>
            </value>
            <value>
                <fullName>AI Fabric</fullName>
            </value>
            <value>
                <fullName>Attended browser embedding SDK</fullName>
            </value>
            <value>
                <fullName>Cloud Platform</fullName>
                <label>Automation Cloud</label>
            </value>
            <value>
                <fullName>Connect Enterprise</fullName>
                <label>Automation Hub</label>
            </value>
            <value>
                <fullName>Automation Ready Programs</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Document Understanding</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>IT Automation</fullName>
            </value>
            <value>
                <fullName>Kibana</fullName>
                <isActive>false</isActive>
                <label>Kibana</label>
            </value>
            <value>
                <fullName>Learning Platform Inquiries</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
                <label>License</label>
            </value>
            <value>
                <fullName>Orchestrator</fullName>
            </value>
            <value>
                <fullName>Orchestrator Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Partner Product</fullName>
            </value>
            <value>
                <fullName>Partner Training</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Process Gold</fullName>
                <label>Process Mining</label>
            </value>
            <value>
                <fullName>Reporting</fullName>
                <isActive>false</isActive>
                <label>Reporting</label>
            </value>
            <value>
                <fullName>Robot</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Studio X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>