uipath-service/main/default/objects/Case/fields/Reopen__c.field-meta.xml
<CustomField>
    <fullName>Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the status from closed to any other status it should be checked</description>
    <label>Reopen</label>
    <type>Checkbox</type>
</CustomField>