uipath-service/main/default/objects/Case/fields/Resolution_from_L2__c.field-meta.xml
<CustomField>
    <fullName>Resolution_from_L2__c</fullName>
    <label>Resolution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>