uipath-service/main/default/objects/Case/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <description>It is required when status=closed</description>
    <label>Resolution Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>