uipath-service/main/default/objects/Case/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <inlineHelpText>Technical summary of the solution</inlineHelpText>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>