uipath-service/main/default/objects/Case/fields/Solution_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Solution_Instructions__c</fullName>
    <inlineHelpText>Instructions to apply the solution</inlineHelpText>
    <label>Solution Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>