uipath-service/main/default/objects/Case/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Please allow us 15 days to plan and decide on the next course of action</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>