uipath-service/main/default/objects/Case/fields/Start_When_New__c.field-meta.xml
<CustomField>
    <fullName>Start_When_New__c</fullName>
    <label>New Time Stamp</label>
    <type>DateTime</type>
</CustomField>