uipath-service/main/default/objects/Case/fields/Status_Customer_Action_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Status_Customer_Action_Time_Stamp__c</fullName>
    <label>Customer Action Time Stamp</label>
    <type>DateTime</type>
</CustomField>