uipath-service/main/default/objects/Case/fields/Status_In_Process_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Status_In_Process_Time_Stamp__c</fullName>
    <label>In Process Time Stamp</label>
    <type>DateTime</type>
</CustomField>