uipath-service/main/default/objects/Case/fields/Status_Pending_Engineering_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Status_Pending_Engineering_Time_Stamp__c</fullName>
    <label>Pending From Engineering Time Stamp</label>
    <type>DateTime</type>
</CustomField>