uipath-service/main/default/objects/Case/fields/Status_Resolved_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Status_Resolved_Time_Stamp__c</fullName>
    <label>Resolved Time Stamp</label>
    <type>DateTime</type>
</CustomField>