uipath-service/main/default/objects/Case/fields/Steps_Performed__c.field-meta.xml
<CustomField>
    <fullName>Steps_Performed__c</fullName>
    <label>Steps Performed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>