uipath-service/main/default/objects/Case/fields/Steps_To_Reproduce_The_Issue__c.field-meta.xml
<CustomField>
    <fullName>Steps_To_Reproduce_The_Issue__c</fullName>
    <label>Steps To Reproduce The Issue</label>
    <type>TextArea</type>
</CustomField>