uipath-service/main/default/objects/Case/fields/Sub_Component__c.field-meta.xml
<CustomField>
    <fullName>Sub_Component__c</fullName>
    <label>Sub Component</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Related_To__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abby</fullName>
            </value>
            <value>
                <fullName>Abbyy_FineReader</fullName>
            </value>
            <value>
                <fullName>Abbyy_FlexiCapture</fullName>
            </value>
            <value>
                <fullName>Academic Alliance</fullName>
            </value>
            <value>
                <fullName>Academic Alliance Edition</fullName>
            </value>
            <value>
                <fullName>Academy Trainings</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account Inquiries</fullName>
            </value>
            <value>
                <fullName>Account Merger</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Active Directory Domain Services Activities</fullName>
            </value>
            <value>
                <fullName>Activites_Keyword Based_Classifier Trainer</fullName>
            </value>
            <value>
                <fullName>Activities_Computer Vision</fullName>
            </value>
            <value>
                <fullName>Activities_Core</fullName>
            </value>
            <value>
                <fullName>Activities_Custom</fullName>
            </value>
            <value>
                <fullName>Activities_Database</fullName>
            </value>
            <value>
                <fullName>Activities_Excel</fullName>
            </value>
            <value>
                <fullName>Activities_FTP</fullName>
            </value>
            <value>
                <fullName>Activities_GoogleSutite</fullName>
                <label>Activities_GoogleSuite</label>
            </value>
            <value>
                <fullName>Activities_IT_Automation</fullName>
            </value>
            <value>
                <fullName>Activities_Java</fullName>
            </value>
            <value>
                <fullName>Activities_Mail</fullName>
            </value>
            <value>
                <fullName>Activities_OCR</fullName>
            </value>
            <value>
                <fullName>Activities_Office365</fullName>
            </value>
            <value>
                <fullName>Activities_Others</fullName>
            </value>
            <value>
                <fullName>Activities_PDF</fullName>
            </value>
            <value>
                <fullName>Activities_Python</fullName>
            </value>
            <value>
                <fullName>Activities_SalesforceConnector</fullName>
            </value>
            <value>
                <fullName>Activities_SAP_BAPI</fullName>
            </value>
            <value>
                <fullName>Activities_Terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>