uipath-service/main/default/objects/Case/fields/Subscription_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Code__c</fullName>
    <label>Subscription Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAE</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>ENT-BASIC</fullName>
            </value>
            <value>
                <fullName>ENT-NONPR</fullName>
            </value>
            <value>
                <fullName>ENT-NONPR-T</fullName>
            </value>
            <value>
                <fullName>ENTPRO</fullName>
            </value>
            <value>
                <fullName>ENT-PROD</fullName>
            </value>
            <value>
                <fullName>ENT-T</fullName>
            </value>
            <value>
                <fullName>ENTX</fullName>
            </value>
            <value>
                <fullName>ENT-NFR</fullName>
            </value>
            <value>
                <fullName>NFR</fullName>
            </value>
            <value>
                <fullName>PG-ENTERPRISE</fullName>
            </value>
            <value>
                <fullName>ENT-STD</fullName>
            </value>
            <value>
                <fullName>TRIAL</fullName>
            </value>
            <value>
                <fullName>UiCLOUD</fullName>
            </value>
            <value>
                <fullName>UIP</fullName>
            </value>
            <value>
                <fullName>ENT-UPG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>