uipath-service/main/default/objects/Case/fields/Time_taken_to_resolve_in_Mnutes__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_to_resolve_in_Mnutes__c</fullName>
    <description>Calculate time from New to Resolve</description>
    <label>Time taken to resolve in Mnutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>