uipath-service/main/default/objects/Case/fields/Total_time_duration__c.field-meta.xml
<CustomField>
    <fullName>Total_time_duration__c</fullName>
    <label>Total Time Taken To Close in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>