uipath-service/main/default/objects/Case/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <inlineHelpText>In case the ticket is a Problem and not a How To every problem should be accompanied by proof of it&apos;s existence and cause and how it was validated</inlineHelpText>
    <label>Validation/Steps Taken so far</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>