uipath-service/main/default/objects/Case/fields/What_is_your_request_related_to__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_request_related_to__c</fullName>
    <label>What is your request related to?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Alliance</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>Academy Incident</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Partner Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>