uipath-service/main/default/objects/Case/fields/What_You_Want_Us_To_Do__c.field-meta.xml
<CustomField>
    <fullName>What_You_Want_Us_To_Do__c</fullName>
    <label>What You Want Us To Do</label>
    <type>TextArea</type>
</CustomField>