uipath-service/main/default/objects/Case/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <label>Workaround</label>
    <type>TextArea</type>
</CustomField>