uipath-service/main/default/objects/Case/recordTypes/Japan_Incident.recordType-meta.xml
<RecordType>
    <fullName>Japan_Incident</fullName>
    <active>true</active>
    <businessProcess>Service Request%2FIncident</businessProcess>
    <label>Japan Incident</label>
</RecordType>