uipath-service/main/default/objects/Case/recordTypes/Proactive_Care.recordType-meta.xml
<RecordType>
    <fullName>Proactive_Care</fullName>
    <active>true</active>
    <businessProcess>Service Request%2FIncident</businessProcess>
    <description>For Proactive Support Portal Users</description>
    <label>Proactive Care</label>
</RecordType>